# cfa-flu-simulator

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
model/: Cargo.toml  default-params.toml
model/src/: lib.rs  mitigations.rs  model.rs  model_unified.rs  parameters.rs  reference_compat.rs  utils.rs
model/tests/reference-data/: antivirals_only.json  community_only.json  no_mitigations.json  ttiq_only.json  vaccine_only.json
scripts/gen_reference/: Cargo.toml
scripts/gen_reference/src/: main.rs
src/: App.vue  main.ts  shims.d.ts
src/components/: ChartPanel.vue  ChartTooltipContent.vue  GroupEditor.vue  MatrixInput.vue  MitigationSection.vue  OnThisPage.vue  ParamField.vue
src/composables/: useModelRun.ts  useParams.ts
src/config/: ui-params.toml  uiConfig.ts
src/sections/: AntiviralsSection.vue  CommunitySection.vue  DetectionSection.vue  ScenarioSection.vue  TTIQSection.vue  VaccineSection.vue
src/utils/: chartScale.ts  pdfReport.ts
src/views/: ResultsView.vue  SummaryView.vue
