[package]
name = "cfa-flu-simulator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
ode_solvers = "0.6.1"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
tsify = "0.4.5"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
paste = "1.0.15"
strum = "0.27.1"
strum_macros = "0.27.1"
float_eq = "1.0.1"
toml = "0.8"
cfasim-model = "0.3.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

[features]
default = ["console_error_panic_hook"]
