[package]
name = "gen_reference"
version = "0.0.0"
edition = "2024"
publish = false

# Generates reference-output fixtures for model/tests/reference-data/ by
# running the upstream dynode-web model. Pinned to a specific commit on
# main so fixtures are reproducible.
# Run from repo root:
#   cargo run --manifest-path scripts/gen_reference/Cargo.toml

[dependencies]
wasm_dynode = { git = "https://github.com/CDCgov/dynode-web", rev = "b369f1ccaf10c9e9e952ddfb5603d91b21e95e93" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
